# renrence_draw

./: .gitignore  2025年台州市“面向人人”语文数学英语竞赛报名表1.xlsx  build.bat  download.py  draw.py  pyproject.toml  requirements.txt  ui.py  ui.spec  ui_one.py  ui_three.py  ui_two.py  utils.py  温岭-2025年台州市中等职业学校学生“面向人人”专业类项目竞赛报名表.xlsx  温岭-2025年台州市中等职业学校学生“面向人人”语数英项目竞赛报名表.xlsx  黄岩-2025年台州市中等职业学校学生“面向人人”专业类项目竞赛报名表.xlsx
已抽取/: 1.xlsx
